CRUD agendamento
Cadastro, alteração, busca e deleção de agendamentos
