# controllers/agendaController.js
@@ -12,4 +12,98 @@ export default class AgendaController {
             res.status(500).json({msg: ex.message});
         }
     }
+
+    async obter(req, res) {
+        try{
+            let {id} = req.params;
+            let agenda = new AgendaModel();
+            agenda = await agenda.obter(id);
+            if(agenda) {
+                res.status(200).json(agenda)
+            }
+            else{
+                res.status(404).json({msg: "Agendamento não encontrado!"});
+            }
+        }
+        catch(ex) {
+            res.status(500).json({msg: ex.message});
+        }
+    }
+
+    async gravar(req, res) {
+
+        try {
+            let {data, horaInicial, horaFinal, cliente, procedimento} = req.body;
+            console.log(data)
+            console.log(horaInicial)
+            console.log(horaFinal)
+            console.log(cliente)
+            console.log(procedimento)
+            
+            if(data && horaInicial && horaFinal && cliente && procedimento) {
+
+                let agenda = new AgendaModel(0, data, horaInicial, horaFinal, cliente, procedimento);
+                let result = await agenda.gravar()
+                if(result)
+                    res.status(201).json({msg: "Agendamento gravado com sucesso!"});
+                else
+                    throw new Error("Erro ao inserir o agendamento no banco de dados");
+            }
+            else {
+                res.status(400).json({msg: "Parâmetros não informados corretamente!1"});
+            }
+        }
+        catch(ex) {
+            res.status(500).json({msg: ex.message});
+        } 
+    }
+
+    async alterar(req, res) {
+        try {
+            let {id, data, horaInicial, horaFinal, cliente, procedimento} = req.body;
+            if(id && data && horaInicial && horaFinal && cliente && procedimento) {
+
+                let agendaModel = new AgendaModel(id, data, horaInicial, horaFinal, cliente, procedimento);
+                if(await agendaModel.obter(id)){
+                    let result = await agendaModel.alterar();
+
+                    if(result) {
+                        res.status(200).json({msg: "Alteração realizada com sucesso!"});
+                    }
+                    else
+                        throw new Error("Erro ao executar o comando update!");
+                }
+                else{
+                    res.status(404).json({msg: "Agendamento não encontrado para alteração"});
+                }
+            }
+            else{
+                res.status(400).json({msg: "Informe os parâmetros corretamente!"});
+            }
+        }
+        catch(ex) {
+            res.status(500).json({msg: ex.message});
+        }
+    }
+
+    async deletar(req, res) {
+        try{
+            let {id} = req.params;
+            let agendaModel = new AgendaModel();
+            if(await agendaModel.obter(id)) {
+                let result = await agendaModel.deletar(id);
+
+                if(result)
+                    res.status(200).json({msg: "Agendamento deletado!"});
+                else
+                    throw new Error("Erro ao executar o comando de deleção");
+            }
+            else {
+                res.status(404).json({msg: "Agendamento não encontrado para a deleção!"})
+            }
+        }
+        catch(ex) {
+            res.status(500).json({msg: ex.message});
+        }
+    }
 }
